Update Java 11