@@ -42,8 +42,9 @@
 		<usertype.core.version>6.0.1.GA</usertype.core.version>
 		<jts.version>1.13</jts.version>
 		<geolatte-geom.version>1.0.6</geolatte-geom.version>
+		<geotools.version>21.0</geotools.version>
 
-		<jaxb-version>2.2.11</jaxb-version>
+		<jaxb-version>2.3.3</jaxb-version>
 		<lombok-version>1.18.22</lombok-version>
 		<lombok-maven-plugin-version>1.18.20.0</lombok-maven-plugin-version>
 		<prometheus.agent.version>0.16.1</prometheus.agent.version>
@@ -56,8 +57,8 @@
 		<owasp-dependency-check-plugin.version>6.5.3</owasp-dependency-check-plugin.version>
 
 		<shrinkwrap-resolver-bom.version>2.2.6</shrinkwrap-resolver-bom.version>
-		<arquillian-version>1.1.14.Final</arquillian-version>
-		<wildfly-arquillian-container-embedded.version>2.1.0.Final</wildfly-arquillian-container-embedded.version>
+		<arquillian-version>1.4.1.Final</arquillian-version>
+		<wildfly-arquillian-container-embedded.version>2.2.0.Final</wildfly-arquillian-container-embedded.version>
 
 
 
@@ -380,7 +381,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${version.surefire.plugin}</version>
 				<configuration>
-					<argLine>-Djboss.socket.binding.port-offset=300</argLine>
+					<argLine>-Djboss.socket.binding.port-offset=300 --add-modules=java.se</argLine>
 					<runOrder>alphabetical</runOrder>
 					<!-- Fork every test because it will launch a separate AS instance -->
 					<forkCount>1</forkCount>
@@ -979,35 +980,37 @@
 			<dependency>
 				<groupId>org.geotools</groupId>
 				<artifactId>gt-jts-wrapper</artifactId>
-				<version>10.5</version>
+				<version>${geotools.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.geotools</groupId>
 				<artifactId>gt-epsg-wkt</artifactId>
-				<version>10.5</version>
+				<version>${geotools.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.geotools</groupId>
 				<artifactId>gt-epsg-hsql</artifactId>
-				<version>10.5</version>
+				<version>${geotools.version}</version>
 			</dependency>
+
 			<dependency>
-	            <groupId>javax.xml.bind</groupId>
-	            <artifactId>jaxb-api</artifactId>
+				<groupId>jakarta.xml.bind</groupId>
+				<artifactId>jakarta.xml.bind-api</artifactId>
 				<version>${jaxb-version}</version>
 			</dependency>
+
 			<dependency>
  				<groupId>com.sun.xml.bind</groupId>
  	            <artifactId>jaxb-impl</artifactId>
 				<version>${jaxb-version}</version>
 			</dependency>
+
+
 			<dependency>
- 				<groupId>com.sun.xml.bind</groupId>
- 	            <artifactId>jaxb-core</artifactId>
-				<version>${jaxb-version}</version>
+				<groupId>javax.annotation</groupId>
+				<artifactId>javax.annotation-api</artifactId>
+				<version>1.3.2</version>
 			</dependency>
-
-
 
 		</dependencies>
 
